--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^16.2.0",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^8.32.1",
     "vite": "^5.1.3"
   }
 }
